# snpit_specutils

./: README.md  pyproject.toml
snpit_specutils/: __init__.py
snpit_specutils/background/: __init__.py  background.py  result.py
snpit_specutils/cal_files/background/: background.yaml
snpit_specutils/cal_files/optical_model/: Roman_grism_OpticalModel_v0.8.yaml  Roman_prism_OpticalModel_v0.8.yaml
snpit_specutils/optical_model/: __init__.py  numba_utils.py  optical_model.py  transformers.py
snpit_specutils/utils/: __init__.py  get_package_file.py
